--- a/.github/workflows/imm-op24.yml
+++ b/.github/workflows/imm-op24.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: imm-op23-docker
+name: imm-op24
 
 on:
   repository_dispatch:
@@ -25,9 +25,9 @@ on:
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt.git
-  REPO_BRANCH: openwrt-23.05
-  FEEDS_CONF: feeds.conf.default23d
-  CONFIG_FILE: config/imm-op23-docker.config
+  REPO_BRANCH: openwrt-24.10
+  FEEDS_CONF: feeds.conf.default24
+  CONFIG_FILE: config/imm-op24.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
