--- a/.github/workflows/imm-op24-1.yml
+++ b/.github/workflows/imm-op24-1.yml
@@ -26,7 +26,7 @@ on:
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt.git
   REPO_BRANCH: openwrt-24.10
-  FEEDS_CONF: feeds.conf.default24
+  FEEDS_CONF: feeds.conf.default24-1
   CONFIG_FILE: config/imm-op24-1.config
   DIY_P1_SH: diy-part3.sh
   #DIY_P2_SH: diy-part2.sh
